# azure-playground-rust

./: Cargo.toml
src/: lib.rs  main.rs
