[package]
name = "azure_playground_rust"
version = "0.1.0"
authors = ["Andy Bell <andy.bell@displaynote.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_sdk_storage_blob = "0.45.2"
azure_sdk_core = "0.43.6"
azure_sdk_storage_core = "0.44.3"
tokio = { version = "0.2", features = ["macros"] }

[dev-dependencies]
